--- a/src/styles/settings/color.css
+++ b/src/styles/settings/color.css
@@ -3,4 +3,13 @@
     --color-gray-light: #FFF;
     --color-primary-medium: #2A7AE4;
     --color-primary-red: #E50914;
+
+    --color-frontend: #6BD1FF;
+    --color-infra: #9CD33B;
+    --color-backend: #00C86F;
+    --color-marketing: #6B5BE2;
+    --color-mobile: #FFBA05;
+    --color-inovation: #FF8C2A;
+    --color-ux: #DC6EBE;
+    --color-data-science: #9CD33B;
 }
